# ISPFoundry

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pyrightconfig.json  ruff.toml
.github/workflows/: ci_gatekeeper.yaml  pre-commit.yaml  test-general.yaml  test-hdrplus-downloader.yaml  test_notebooks.yaml
explanations/: step_0_hdrplus_dataset.md  step_1_black_level_subtraction.md  step_2_lens_shading_correction.md  step_3_align_and_merge.md
ispfoundry/: __init__.py  pipeline.py  utils.py
ispfoundry/configs/: config.yaml  config_loader.py
ispfoundry/datasets/: __init__.py  dataset_loader.py  hdrplus_downloader.py  metadata.py
ispfoundry/pipeline_steps/: align_and_merge.py  black_level_subtraction.py  lens_shading_correction.py
notebooks/: pipeline_example.ipynb  step_0_hdrplus_downloading.ipynb  step_1_black_level_subtraction.ipynb  step_2_lens_shading_correction.ipynb  step_3_align_and_merge.ipynb
src/: base.py  pipeline.py  utils.py
src/configs/: config.yaml  config_loader.py
src/dataset/: README.md  hdrplus_downloading.ipynb  hdrplus_loader.py
src/datasets/: hdrplus_downloader.py
src/phase_1/step_0_load_data/: load_data.ipynb
src/phase_1/step_1_black_level_subtraction/: black_level_subtraction.ipynb  black_level_subtraction.py
src/pipeline_steps/: align_and_merge.py  black_level_subtraction.py  lens_shading_correction.py
tests/: conftest.py  test_align_and_merge.py  test_base.py  test_black_level_subtraction.py  test_dataloader.py  test_dataset_downloader.py  test_dataset_loader.py  test_datasets.py  test_init.py  test_lens_shading_correction.py  test_metadata.py  test_notebooks.py  test_pipeline.py  test_utils.py
