[project]
name = "ISPFoundry"
version = "0.1.0"
description = "Image Signal Processing from Scratch in a clear and structured way."
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "ipykernel>=7.1.0",
    "loguru>=0.7.3",
    "omegaconf>=2.3.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.14.11",
]

[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
